<resources>
    <string name="app_name">inOne App</string>
    <string name="account_type">ru.headpoint.inoneapp</string>
    <string name="event_type">Тип события</string>
    <string name="short_info">Краткая информация</string>
    <string name="brief_event">Описание события</string>
    <string name="geo">Геопозиция</string>
    <string name="camera">Камера</string>
    <string name="gallery">Галерея</string>
    <string name="choose_type_event">Выберите тип события</string>
    <string name="enter_short_description">Введите информацию</string>
    <string name="enter_event_brief">Введите описание</string>
    <string name="create">Создать</string>
    <string name="object_list">Список объектов</string>
    <string name="at_map">На карте</string>
    <string name="enter_ruchnyy">Ввести вручную</string>
    <string name="ready">Готово</string>
    <string name="cancel">Отменить</string>
    <string name="change_geo">Изменение геопозиции</string>
    <string name="permission_required_toast">permission_required_toast</string>
    <string name="permission_rationale_location">permission_rationale_location</string>
    <string name="location_permission_denied">location_permission_denied</string>
    <string name="search_hint">Введите имя элемента</string>
    <string name="devlist_act_folder">device list activity Folder</string>
    <string name="info">Инфо</string>
    <string name="enter_login">Введите логин</string>
    <string name="enter_password">Введите пароль</string>
    <string name="login">Войти</string>
    <string name="loginIdap">Idap - аутентификация</string>
    <string name="or">или</string>
    <string name="incorrect_login">Неверная связка логина и пароля</string>
    <string name="authTitle">СИСТЕМА СИТУАЦИОННОГО\nВИДЕОМОНИТОРИНГА</string>
    <string name="signOut">Выйти</string>
    <string name="server">Сервер</string>
    <string name="phone">+7 (495) 775–01–63</string>
    <string name="support">Написать в службу поддержки</string>
    <string name="license">Лицензионное соглашение</string>
    <string name="company">Сайт компании</string>
    <string name="companySign">2013 – 2018 ООО «Хэд Пойнт»</string>
    <string name="appVersion">Версия приложения 1.0.9 (128)</string>
    <string name="unauthorized">Неавторизованный\nпользователь</string>
    <string name="information">Информация</string>
    <string name="source">Источник события (тип оборудования)</string>
    <string name="location">Местоположение</string>
    <string name="date">Дата происшествия</string>
    <string name="message">Сообщение</string>
    <string name="eventDetails">Детали события</string>
    <string name="checkArchive">Посмотреть в архиве</string>
    <string name="broadcast">Трансляция</string>
    <string name="showOnMap">Показать на карте</string>
    <string name="faceDetected">Лицо захвачено</string>
    <string name="reactionScenario">Сценарий реагирования</string>
    <string name="reset">Сбросить</string>
    <string name="equipment">Оборудование</string>
    <string name="filters">Фильтры</string>
    <string name="apply">Применить</string>
    <string name="filterDate">По датам</string>
    <string name="from">с </string>
    <string name="tillNow">По текущий момент</string>
    <string name="till">по</string>
    <string name="filterSource">По типу источника событий</string>
    <string name="filterEventType">По типу события</string>
    <string name="eventsFilter">Фильтр событий</string>
    <string name="toObjectPlan">К плану объекта</string>
    <string name="toEventList">К списку событий</string>
    <string name="forDay">За сутки: %d</string>
    <string name="object">Объект наблюдения</string>
    <string name="status">Статус</string>
    <string name="installedPlace">Место установки</string>
    <string name="equipmentList">Список оборудования</string>
    <string name="latitude">Широта %s</string>
    <string name="longitude">Долгота %s</string>
    <string name="placementDescription">Местоположение из реестра элементов\nПропускная способность: %s</string>
    <string name="sensorIndicators">Показатели датчика</string>
    <string name="cctv">Видеонаблюдение</string>
    <string name="archive">Архив</string>
    <string name="noPermission">Разрешение не получено</string>
    <string name="userEvent">Пользовательское событие</string>
    <string name="chooseLocation">Выберите локацию</string>
    <string name="availableDesktops">Доступные десктопы</string>
    <string name="elements">Реестр элементов</string>
    <string name="eventsJournal">Журнал событий</string>
    <string name="map">Карта</string>
    <string name="objectPlan">План объекта</string>
    <string name="createEvent">Создать событие</string>
    <string name="search_map">Поиск</string>
    <string name="denomination">Номинал</string>
    <string name="sum">Сумма</string>
    <string name="amount">Количество</string>
    <string name="number">Номер:</string>
    <string name="speed">Скорость:</string>
    <string name="direction">Направление:</string>
    <string name="broadcastTimeout">Истек таймаут подключения к трансляции</string>
    <string name="invalidBroadcast">Отсутствует или некорректна ссылка на трансляцию</string>
    <string name="broadcastError">Произошла ошибка трансляции видеопотока</string>
    <string name="fromAfterToError">Начальная дата не может быть позже конечной</string>
    <string name="watchArchive">Посмотреть в архиве</string>
    <string name="fromLimitError">Нельзя выбрать время раньше доступного</string>
    <string name="toLimitError">Нельзя выбрать время позже доступного</string>
    <string name="noConnection">Отсутствует подключение</string>
    <string name="errorGPS">Для определения местоположения включите GPS в настройках телефона</string>
    <string name="archiveRedirectMessage">Через 3 секунды вы будете перенаправлены на архив</string>
    <string name="availableArchives">Доступные архивы</string>
    <string name="event_place">Место происшествия</string>
    <string name="event_device">Источник</string>
    <string name="enter_device">Введите источник</string>
    <string name="chooseDevice">Выберите источник</string>
</resources>
